Init for assignment 2

--- a/test_tubes/Assignment2 - TestTubes/test_tubes.ipynb
+++ b/test_tubes/Assignment2 - TestTubes/test_tubes.ipynb
@@ -129,6 +129,8 @@
     "            boundaries = find_edges(f\"Test Tubes-{i}/{img_src}\")\n",
     "            print(boundaries)\n",
     "            img_cropped = crop_image(f\"Test Tubes-{i}/{img_src}\", boundaries)\n",
+    "            plt.imshow(img_cropped)\n",
+    "            plt.show()\n",
     "            print(f\"Writing test tube: Test Tubes-{i}/{img_src}\")\n",
     "            cv2.imwrite(f\"output-{i}/{img_src}\", img_cropped)\n",
     "\n",
