progress in training models 18-5-2020

--- a/rbcs_vs_sickles/classifyer.ipynb
+++ b/rbcs_vs_sickles/classifyer.ipynb
@@ -11,7 +11,6 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import random\n",
-    "from keras.preprocessing.image import load_img, img_to_array\n",
     "from keras.models import Sequential\n",
     "from keras.layers import Conv2D, MaxPooling2D, Dense, Flatten"
    ]
@@ -48,6 +47,43 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def box_cell(arr_img):\n",
+    "    # plt.imshow(arr_img, cmap=\"gray\")\n",
+    "    # plt.show()\n",
+    "    return cv2.Canny(arr_img, 30, 80)\n",
+    "    # plt.imshow(arr_canny, cmap=\"gray\")\n",
+    "    # plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "################## REMOVE THIS CELL #####################\n",
+    "dict_img_src = { \"Healthy\": [], \"Sick\": load_img_src(\"sick\") }\n",
+    "\n",
+    "counter = 0\n",
+    "\n",
+    "for key in [\"Healthy\", \"Sick\"]:\n",
+    "        for img_src in dict_img_src[key]:\n",
+    "            print(f\"Preprocessing {img_src}\")            \n",
+    "            arr_img = cv2.imread(img_src, cv2.IMREAD_REDUCED_GRAYSCALE_8)\n",
+    "            arr_img = cv2.resize(arr_img, (255, 255)) / 255\n",
+    "            arr_img = box_cell(arr_img)\n",
+    "            counter += 1\n",
+    "\n",
+    "            if counter == 5:\n",
+    "                break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def preprocess(dict_img_src):\n",
     "    pile = []\n",
     "\n",
@@ -62,7 +98,9 @@
     "                label = int(0)\n",
     "            \n",
     "            arr_img = cv2.imread(img_src, cv2.IMREAD_REDUCED_GRAYSCALE_8)\n",
-    "            arr_img = cv2.resize(arr_img, (255, 255)) / 255 # /255 to normalize this image data\n",
+    "            arr_img = cv2.resize(arr_img, (255, 255))\n",
+    "            arr_img = box_cell(arr_img)\n",
+    "            arr_img = arr_img / 255\n",
     "            pile.append(np.array([arr_img, label]))\n",
     "\n",
     "    # We shuffle the pile to create a random order of healthy and sick cells\n",
@@ -146,8 +184,8 @@
    "source": [
     "# Defining CNN model\n",
     "model = Sequential()\n",
-    "model.add(Conv2D(32, kernel_size=(5, 5), padding=\"same\", activation=\"relu\", input_shape=(255, 255, 1)))\n",
-    "model.add(MaxPooling2D(pool_size=(5, 5)))\n",
+    "model.add(Conv2D(32, kernel_size=(25, 25), padding=\"same\", activation=\"relu\", input_shape=(255, 255, 1)))\n",
+    "model.add(MaxPooling2D(pool_size=(25, 25)))\n",
     "model.add(Flatten())\n",
     "model.add(Dense(1500, activation=\"relu\"))\n",
     "model.add(Dense(750, activation=\"relu\"))\n",
